@@ -1,3 +1,9 @@
+2009-11-03  Jason Merrill  <jason@redhat.com>
+
+	PR c++/41876
+	* parser.c (cp_parser_exception_declaration): Pass true to
+	is_condition parm of cp_parser_type_specifier_seq.
+
 2009-11-03  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/37093
